<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResultActivity" >

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/result"
        android:textColor="#7c05e3" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/score"
        android:textColor="#7c05e3" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/nextLevelButton"
        android:layout_below="@+id/scoreTextView"
        android:layout_marginTop="115dp"
        android:background="@drawable/menu_button_bg"
        android:text="@string/quit"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/quitButton"
        android:layout_centerVertical="true"
        android:background="@drawable/menu_button_bg"
        android:text="@string/playAgain" 
        android:textColor="#FFF" />

    <Button
        android:id="@+id/nextLevelButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/menu_button_bg"
        android:text="@string/nextLevel"
        android:textColor="#FFF" />
    
</RelativeLayout>    