<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MemoryActivity" 
    >

    <TextView
        android:id="@+id/gameNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/memoryGame"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
         android:layout_alignLeft="@+id/gameNameTextView"
         android:layout_below="@+id/gameNameTextView"
         android:layout_marginTop="60dp"
         android:layout_marginLeft="11dp"
         android:textColor="#FFF"
         android:background="@drawable/menu_button_bg"
         android:text="@string/play" />
    
    <Button
        android:id="@+id/settingsButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
		android:layout_alignLeft="@+id/playButton"
 		android:layout_below="@+id/playButton"
 		android:layout_marginTop="23dp"
 		android:layout_marginLeft="2dp"
 		 android:textColor="#FFF"
 		android:background="@drawable/menu_button_bg"
        android:text="@string/settings" />

    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/settingsButton"
        android:layout_below="@+id/settingsButton"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="2dp"
         android:textColor="#FFF"
        android:background="@drawable/menu_button_bg"
        android:text="@string/instructions" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/instructionsButton"
        android:layout_below="@+id/instructionsButton"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="2dp"
         android:textColor="#FFF"
        android:background="@drawable/menu_button_bg"
        android:text="@string/exit" />

   
    
</RelativeLayout>